--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>goit-js-hw-11</title>
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <form class="form">
+      <input
+        class="form-input"
+        name="input"
+        type="text"
+        placeholder="Search images..."
+      />
+      <button class="form-btn" type="submit">Search</button>
+    </form>
+    <span class="loader visually-hidden"></span>
+    <ul class="gallery"></ul>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
